--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-Commerce and Web Programming</title>
 </head>
 <body>
-    Siam Sarker
+    <h1 align="center">E-Commerce and Web Programming</h1>
+
+    <h2>Basic Math Equations:</h2>
+
+    <div class="equation">Addition:  7 + 5 = 12</div>
+    <div class="equation">Subtraction:  10 − 3 = 7</div>
+    <div class="equation">Multiplication: 4 × 6 = 24</div>
+    <div class="equation">Division:  20 ÷ 4 = 5</div>
+    <div class="equation">Exponentiation:  3² = 9</div>
+    <div class="equation">Square root:  √49 = 7</div>
+    <div class="equation">Summation:∑ (i = 1 to 4) i = 1 + 2 + 3 + 4 = 10</div>
+    <div class="equation">Modulo:  17 mod 5 = 2</div>
+    <div class="equation">Equation: 2x + 3 = 11</div>
+
+    <h2>Some Necessary Links:</h2>
+
+    <a href="https://classroom.google.com/c/NzUyNzM1NTk0NDQy">E-commerce and Web Programming - ICT 18 (Google Classroom)</a><br>
+    <a href="https://github.com/SiamSarker57/Web-Programming">Siam Sarker (Github Profile)</a><br>
+    <a href="https://sites.google.com/view/mdsiamsarker/home">Md. Siam Sarker(Google Sites Profile)</a>
+
+    <h2>An Marque:</h2>
+
+    <marquee> <b>Breaking News: </b>"India and Pakistan tensions rise over Kashmir, ceasefire violations reported; both nations call for urgent dialogue and peace."</marquee>
+
+    <h2>Audio:</h2>
+
+    <audio controls>
+        <source src="C:\Users\Hp\Music\Music Studio\Tajder-E-haram.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+
+    <h2>Video: </h2>
+
+    <video controls width="560" height="315">
+        <source src="C:\Users\Hp\Videos\Videos\As_Subho.mp4" type="video/mp4">
+        Your browser does not support the video element.
+    </video>
+
+    <h2>PDF File: </h2>
+
+    <object data="C:\Users\Hp\Downloads\E-Commerce 1st.pdf" type="application/pdf" width="600" height="400">
+        <p>Sorry, your browser does not support embedded PDFs. Please download the PDF to view it: <a href="your-pdf-file.pdf">Download PDF</a>.</p>
+    </object>
+
+
 </body>
 </html>
